Deliver Order function

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -104,7 +104,7 @@
                                 @*---------------------------------------------------------------------------------*@
                                 <!-- DELETE Button trigger modal -->
                                 <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                                    @*used products removw function*@
+                                    @*used products remove function*@
                                     <button type="button" onclick="RemoveProduct(@item.Id)" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
                                         <i class="far fa-trash-alt"></i>
                                     </button>
