--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -3,7 +3,8 @@
 *@
 @{
 }
-@model IEnumerable<Deckel_Shop.Models.Customer2>
+@model IEnumerable<Database.Models.Order>
+
 
 @*nav bar*@
 <ul class="nav nav-tabs nav-tabs">
@@ -26,7 +27,7 @@
 <div class="row mt-3 pt-3 mb-3">
     <div class="col-sm-4">
         <div class="input-group">
-            <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc" >
+            <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc">
             <div class="input-group-append">
                 <button class="input-group-text"><i class="fa fa-search"></i></button>
             </div>
@@ -81,23 +82,25 @@
                     <th scope="col">ORDER#</th>
                     <th scope="col">ORDER DATE</th>
                     <th scope="col">CUSTOMER NAME</th>
+                    <th scope="col">Order Status</th>
                     <th scope="col">AMOUNT</th>
                     <th scope="col">ORDER TOTAL</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
-                @if (Model !=null)
+                @if (Model != null)
                 {
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <th scope="row">@Html.DisplayFor(modelItem => item.Id)</th>
+                            <th scope="row">@Html.DisplayFor(modelItem => item.OrderId)</th>
 
-                            <td>@Html.DisplayFor(modelItem => item.Date)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Amount)</td>
-                            <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
+                            <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Customer.FirstName)</td>
+                            <td>@Html.DisplayFor(modelItem => item.OrderStatus)</td>
+                            <td>@Html.DisplayFor(modelItem => item.OrderedItems.Count)</td> @*needs to be fixed*@
+                            <td>@Html.DisplayFor(modelItem => item.OrderTotal)</td>
                             <td>
                                 <span data-toggle="tooltip" data-placement="bottom" title="info">
                                     <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
@@ -113,7 +116,7 @@
                         </tr>
                     }
                 }
-               
+
 
             </tbody>
         </table>
