--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Deckel_Shop.Session;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -6,12 +8,12 @@
     <title>@ViewData["Title"] - Deckel_Shop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+
     <link rel="stylesheet" href="~/css/site.css" />
     <script type="text/javascript">(function () { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })();</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
 </head>
 <body>
     <header>
@@ -23,7 +25,7 @@
             </div>
             <ul class="nav-links">
                 <li class="navAnim">
-                    <a  asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a>
+                    <a asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a>
                 </li>
                 <li class="navAnim">
                     <a asp-area="" asp-controller="Product" asp-action="index">Shop</a>
@@ -38,6 +40,10 @@
             <div id="nav-log" class="" style="position: absolute; top:25%; right:25%; width:100px;  text-align:right;">
                 <partial name="_LoginPartial" />
             </div>
+            <div class="col-1"></div>
+            @{
+                var cart = SessionHelper.Get<Cart>(Context.Session, "cart");
+            }
             <a asp-area="" asp-controller="Cart" asp-action="Index">
                 <i class="fas fa-shopping-cart" style="font-size: 48px; color: #c4a970;"></i>
             </a>
