--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -80,6 +80,7 @@
                     <th scope="col">ORDER#</th>
                     <th scope="col">ORDER DATE</th>
                     <th scope="col">CUSTOMER NAME</th>
+                    <th scope="col">Order Status</th>
                     <th scope="col">AMOUNT</th>
                     <th scope="col">ORDER TOTAL</th>
                     <th scope="col"></th>
@@ -104,7 +105,7 @@
                         </span>
 
                         <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                            <button type="button" id="ModalShowBtn" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                            <button onclick="RemoveOrder(@item.OrderId)" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
                                 <i class="far fa-trash-alt"></i>
                             </button>
                         </span>
@@ -201,8 +202,8 @@
                 Delete Order?
             </div>
             <div class="modal-footer">
-                <form method="post">
-                    <button class="btn btn-danger" id="DeleteBtn" name="deleteId" value="">Yes</button>
+                <form asp-action="RemoveOrder">
+                    <button class="btn btn-danger" id="DeleteOrderBtn" name="id" value="">Yes</button>
                 </form>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
