delivered orders detail info ( copy / paste ) @ Andy

--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -4,7 +4,6 @@
 @{
 }
 @model IEnumerable<Database.Models.Order>
-
 @*nav bar*@
 <ul class="nav nav-tabs nav-tabs">
     <li class="nav-item">
@@ -102,7 +101,7 @@
                             <td>@Html.DisplayFor(modelItem => item.OrderTotal)</td>
                             <td>
                                 <span data-toggle="tooltip" data-placement="bottom" title="info">
-                                    <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                                    <button type="button" onclick="GetModalInfo(@item.OrderId, 'orderDetails')" id="infoModalBtn-@item.OrderId" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
                                         <i class="fas fa-info-circle"></i>
                                     </button>
                                 </span>
@@ -139,32 +138,11 @@
                         <div class="col-md-6">
                             <h3 class="d-flex justify-content-between align-items-center mb-3">
                                 Purchased products
-                                <span class="badge bg-primary rounded-pill">3</span>
+                                <span class="badge bg-light rounded-pill">3</span>
                             </h3>
                             <hr />
 
-                            <ul class="list-group mb-3">
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <div>
-                                        <h6 class="my-0">Product name</h6>
-                                        <small class="text-muted">Brief description</small>
-                                    </div>
-                                    <span class="text-muted">$12</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <div>
-                                        <h6 class="my-0">Second product</h6>
-                                        <small class="text-muted">Brief description</small>
-                                    </div>
-                                    <span class="text-muted">$8</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <div>
-                                        <h6 class="my-0">Third item</h6>
-                                        <small class="text-muted">Brief description</small>
-                                    </div>
-                                    <span class="text-muted">$5</span>
-                                </li>
+                            <ul class="list-group mb-3" id="OrderedItemsList">
                             </ul>
 
                         </div>
@@ -177,9 +155,9 @@
 
                             <div class="card" style="width: 100%;">
                                 <div class="card-body">
-                                    <h5 class="card-title">Twitter, Inc</h5>
-                                    <p class="card-text">795 Folsom Ave, Suite 600 San Francisco, CA 94107</p>
-                                    <abbr title="Phone">Phone:</abbr> (123) 456-7890
+                                    <h5 class="card-title" id="personName">Twitter, Inc</h5>
+                                    <p class="card-text" id="personAddress">795 Folsom Ave, Suite 600 San Francisco, CA 94107</p>
+                                    <span id="personPhone">Phone:</span>
                                     <br />
                                     <br />
                                     <a href="#" class="btn btn-primary">Change</a>
@@ -192,17 +170,13 @@
                                     <span class="text-muted">50 kr</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <h6 class="my-0">Extra cost:</h6>
-                                    <span class="text-muted">29 kr</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
                                     <h6 class="my-0">Order cost:</h6>
-                                    <span class="text-muted">1550 kr</span>
+                                    <span id="orderCost" class="text-muted">1550 kr</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between bg-light"></li>
                                 <li class="list-group-item d-flex justify-content-between">
                                     <span>Total (SEK)</span>
-                                    <strong>1629 kr</strong>
+                                    <strong id="total">1629 kr</strong>
                                 </li>
                             </ul>
                         </div>
@@ -210,8 +184,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
