removed amount from table

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -269,7 +269,7 @@
 
                     <div class="modal-footer">
                         <input type="submit" value="Save changes" id="saveBtnForEditCustomer" class="btn btn-danger" disabled />
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                        <button id="CancleBtn" type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                     </div>
             </form>
             </div>
