fixed stock / customer modals

--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -144,7 +144,7 @@
             <div class="modal-body">
                 <form asp-action="AddProduct">
                     @*start of form*@
-                    <div class="form-row">
+                    <div class="row">
                         <div class="form-group col-md-6">
                             <label for="inputStockID">Product ID</label>
                             <input type="text" class="form-control" id="inputProductID">
@@ -154,7 +154,7 @@
                             <input name="Name" type="text" class="form-control" id="inputName">
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="row">
 
 
                         <div class="form-group col-md-6">
@@ -210,14 +210,14 @@
             <div class="modal-body">
                 <form>
                     @*start of form*@
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-md-12 text-right">
                             <button type="button" id="editBtn" onclick="enableForm()" class="btn btn-light" style="background-color:transparent">
                                 <i class="far fa-edit"></i>Edit
                             </button>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="row">
                         <div class="form-group col-md-6">
                             <label for="ProductID">Product ID</label>
                             <input type="text" class="form-control" id="inputCustomerID" disabled />
@@ -228,7 +228,7 @@
                         </div>
                     </div>
 
-                    <div class="form-row">
+                    <div class="row">
                         <div class="form-group col-md-6">
                             <label for="inputAmount">Amount</label>
                             <input type="text" class="form-control" id="inputLastName" disabled>
