--- a/Deckel-Shop/Views/Cart/SavedCart.cshtml
+++ b/Deckel-Shop/Views/Cart/SavedCart.cshtml
@@ -8,51 +8,84 @@
     var cart = SessionHelper.Get<Cart>(Context.Session, "cart");
 }
 
-<h4>Your Shopping Cart contains the following products:</h4>
-<br />
-@if(Model != null)
-            {
+<section class="shopping-cart dark">
+    <div class="block-heading">
+        <h2>Shopping Cart</h2>
+        <p>Your Shopping Cart contains the following products:</p>
+    </div>
+    @if (Model != null)
+    {
+        <table class="table table-hover">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Image</th>
+                    <th scope="col">Product ID</th>
+                    <th scope="col" class="text-center">Price</th>
+                    <th scope="col" class="text-center">Amount</th>
+                    <th scope="col" class="text-center">Qty</th>
+                    @*<th></th>*@
+                    <th class="text-center">Total Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                @{ var totalPrice = 0.0M; }
+                @foreach (var product in Model.Products)
+                {
+                    var productTotal = product.Price * product.Amount;
+                    totalPrice += productTotal;
+                    <tr>
+                        <td class="text-center">
+                            <img src="@product.ImgName2" />
+                        </td>
+                        <th>@product.Id</th>
+                        <td class="text-center">@product.Name</td>
+                        <td class="text-center">@product.Price</td>
+                        @*<td class="text-center">@product.Amount</td>*@
+                        <td class="text-center">
+                            <div class="col-md-6 quantity">
+                                @*<label for="quantity">Quantity:</label>*@
+                                <div class="input-group">
+                                    <input id="quantity" type="number" value="@product.Amount" class="form-control quantity-input">
+                                    <div class="input-group-append">
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                                            <i class="far fa-trash-alt"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td class="text-center">@productTotal</td>
+                    </tr>
+                }
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    @*<td></td>*@
+                    <td></td>
+                    <th class="text-center">@totalPrice SEK</th>
+                </tr>
 
-            
-<p><b>Cart Id:</b> @Model.Id</p>
-<p><b>Customer: </b> @Model.CustomerId - @Model.CustomerName</p>
-<p><b>Products: </b> </p>
+            </tbody>
+        </table>
+    }
 
-<table class="table table-hover">
-    <thead class="thead-light">
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Product</th>
-            <th scope="col" class="text-center">Price</th>
-            <th scope="col" class="text-center">Qty.</th>
-            <th class="text-center">Total Price</th>
-        </tr>
-    </thead>
-    <tbody>
-        @{ var totalPrice = 0.0M; }
-        @foreach (var product in Model.Products)
-        {
-            var productTotal = product.Price * product.Amount;
-            totalPrice += productTotal;
-            <tr>
-                <th>@product.Id</th>
-                <td>@product.Name</td>
-                <td class="text-center">@product.Price</td>
-                <td class="text-center">@product.Amount</td>
-                <td class="text-center">@productTotal</td>
-            </tr>
-        }
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <th class="text-center">@totalPrice</th>
-        </tr>
+    <hr />
+    
 
-    </tbody>
-</table>
-            }
+    <div class="col-md-6 col-lg-4">
+        <div class="summary">
+            <h3>Summary</h3>
+            <div class="summary-item"><span class="text">Subtotal</span><span class="price">$360</span></div>
+            <div class="summary-item"><span class="text">Discount</span><span class="price">$0</span></div>
+            <div class="summary-item"><span class="text">Shipping</span><span class="price">$0</span></div>
+            <div class="summary-item"><span class="text">Total</span><span class="price"></span></div>
+            <button type="button" onclick="location.href = 'cart/checkout';" class="btn btn-primary btn-lg btn-block">Checkout</button>
+        </div>
+    </div>
+    @*</div>*@
 
 
-<p>The Shopping Cart Information was saved. You can add more products to your shopping cart <a asp-action="Index">here</a>.</p>
+</section>
+
