--- a/Deckel-Shop/Views/Cart/SavedCart.cshtml
+++ b/Deckel-Shop/Views/Cart/SavedCart.cshtml
@@ -34,19 +34,19 @@
                     var productTotal = product.Price * product.Amount;
                     totalPrice += productTotal;
                     <tr>
-                        <td class="text-center">
-                            <img src="@product.ImgName2" />
+                        <td>
+                            <img src="@product.ImgName" />
                         </td>
                         <th>@product.Id</th>
                         <td class="text-center">@product.Name</td>
                         <td class="text-center">@product.Price</td>
                         @*<td class="text-center">@product.Amount</td>*@
                         <td class="text-center">
-                            <div class="col-md-6 quantity">
+                            <div class="col-md-6 quantity m-auto">
                                 @*<label for="quantity">Quantity:</label>*@
                                 <div class="input-group">
                                     <input id="quantity" type="number" value="@product.Amount" class="form-control quantity-input">
-                                    <div class="input-group-append">
+                                    <div class="input-group-append ">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
                                             <i class="far fa-trash-alt"></i>
                                         </button>
@@ -74,17 +74,17 @@
     <hr />
     
 
-    <div class="col-md-6 col-lg-4">
-        <div class="summary">
+    <div class="col-md-6 col-lg-4 m-auto">
+        @*<div class="summary">
             <h3>Summary</h3>
             <div class="summary-item"><span class="text">Subtotal</span><span class="price">$360</span></div>
             <div class="summary-item"><span class="text">Discount</span><span class="price">$0</span></div>
             <div class="summary-item"><span class="text">Shipping</span><span class="price">$0</span></div>
-            <div class="summary-item"><span class="text">Total</span><span class="price"></span></div>
+            <div class="summary-item"><span class="text">Total</span><span class="price"></span></div>*@
             <button type="button" onclick="location.href = 'cart/checkout';" class="btn btn-primary btn-lg btn-block">Checkout</button>
-        </div>
+        @*</div>
+    </div>*@
     </div>
-    @*</div>*@
 
 
 </section>
