Fixed cart button

--- a/Deckel-Shop/Views/Cart/SavedCart.cshtml
+++ b/Deckel-Shop/Views/Cart/SavedCart.cshtml
@@ -81,7 +81,8 @@
             <div class="summary-item"><span class="text">Discount</span><span class="price">$0</span></div>
             <div class="summary-item"><span class="text">Shipping</span><span class="price">$0</span></div>
             <div class="summary-item"><span class="text">Total</span><span class="price"></span></div>*@
-            <button type="button" onclick="location.href = 'cart/checkout';" class="btn btn-primary btn-lg btn-block">Checkout</button>
+           
+            <a asp-controller="cart" asp-action="checkout" class="btn btn-primary btn-lg btn-block">Checkout</a>
         @*</div>
     </div>*@
     </div>
