--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -75,6 +75,16 @@ nav {
     list-style: none;
 }
 
+.nav-items{
+    display:flex;
+    width: 10%;
+    list-style: none;
+}
+
+.nav-items .btn{
+    font-size: 12px;
+}
+
     .nav-links li {
         list-style: none;
     }
@@ -82,14 +92,16 @@ nav {
     .nav-links a {
         color: #c4a970;
         text-decoration: none;
-        letter-spacing: 3px;
+        /*letter-spacing: 3px;*/ 
         font-weight: bold;
         font-size: 16px;
     }
 
-    .nav-item{
-        list-style:none;
-    }
+.nav-item a {
+    text-align: right;
+    font-size: 12px;
+    top: 20%;
+}
 
 nav a:before {
     content: "";
@@ -106,13 +118,10 @@ nav a:hover:before {
 }
 
 .text-dark {
-    text-align: justify !important;
     color: #c4a970 !important;
 }
 
 nav .nav-link {
-    display: block !important;
-    padding: 1px !important;
 }
 
 
