--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -39,10 +39,6 @@
                             <img class="pic-1" src="@p.ImgName">
                             <img class="pic-2" src="@p.ImgName2">
                         </a>
-                        <ul class="social">
-                            <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
-                            <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                        </ul>
                         <span class="product-new-label">Hot</span>
                     </div>
                     <div class="product-content">
@@ -51,8 +47,8 @@
                             @p.Price SEK
                         </div>
                 <form asp-action="AddProductToCart" asp-controller="cart">
-                        <button class="btn btn-light" value="@p.Id" name="id">
-                            <i class="fas fa-shopping-cart" style="color: #c4a970;"></i>
+                        <button class="btn btn" value="@p.Id" name="id">
+                            <a class="add-to-cart" >ADD TO CART</a>
                         </button>
                 </form>
                         @*<input class="btn btn-primary" type="submit" value="ADD TO CART" id="AddToCartBtn" onclick="AddToCart(@p.Id)" />*@
