--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -77,12 +77,17 @@ nav {
 
 .nav-items{
     display:flex;
-    width: 10%;
+    background-color: #4e4e4e;
     list-style: none;
 }
 
-.nav-items .btn{
-    font-size: 12px;
+#navbarDropdownMenuLink {
+    color: #c4a970;
+    float:right;
+}
+
+.nav-items .btn {
+    font-size: 14px;
 }
 
     .nav-links li {
@@ -98,9 +103,7 @@ nav {
     }
 
 .nav-item a {
-    text-align: right;
     font-size: 12px;
-    top: 20%;
 }
 
 nav a:before {
@@ -204,8 +207,6 @@ nav .nav-link {
     }
 
     .text-dark {
-        opacity: 0;
-        pointer-events: none;
     }
 
     .nav-links li {
