--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -25,7 +25,6 @@
                     <img id="img_logo" alt="Logo" src="@Url.Content("~/Image/Deckel-Shop-Logo4.png")" />
                 </a>
             </div>
-            <table>
                 <ul class="nav-links">
                     <li class="navAnim">
                         <a asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a>
@@ -41,7 +40,7 @@
                     </li>
                 </ul>
                 <div>
-                    <ul class="nav-items mr-auto">
+                    <ul class="nav-items">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">
@@ -65,7 +64,6 @@
                         </li>
                     </ul>
                 </div>
-            </table>
             <div style="float:right">
                 <div>
                     <a asp-controller="cart" asp-action="index">
