--- a/Deckel-Shop/Views/Shared/_LoginPartial.cshtml
+++ b/Deckel-Shop/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @inject UserManager<IdentityUser> UserManager
 
 
-@if (SignInManager.IsSignedIn(User))
+@*@if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-controller="Profile" asp-action="Index" title="Manage">Hello @User.Identity.Name!</a>
@@ -22,5 +22,5 @@ else
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
-}
+}*@
 
