--- a/Deckel-Shop/Views/Cart/Checkout.cshtml
+++ b/Deckel-Shop/Views/Cart/Checkout.cshtml
@@ -7,10 +7,12 @@
         -moz-user-select: none;
         user-select: none;
     }
-    
 </style>
+@model Database.Models.Customer
+ 
+@using (Html.BeginForm())
 
-<h2>Checkout</h2>
+    @*<h2>Checkout</h2>*@
 <div class="row g-5">
     <div class="col-md-5 col-lg-4 order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -52,7 +54,7 @@
         <form class="needs-validation" novalidate>
             <div class="row g-3">
                 <div class="col-sm-6">
-                    <label for="firstName" class="form-label">First name</label>
+                    @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
                     <div class="invalid-feedback">
                         Valid first name is required.
@@ -60,7 +62,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <label for="lastName" class="form-label">Last name</label>
+                    @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
                     <div class="invalid-feedback">
                         Valid last name is required.
@@ -68,7 +70,7 @@
                 </div>
 
                 <div class="col-12">
-                    <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
+                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 ml-auto" })
                     <input type="email" class="form-control" id="email" placeholder="you@example.com">
                     <div class="invalid-feedback">
                         Please enter a valid email address for shipping updates.
@@ -76,7 +78,7 @@
                 </div>
 
                 <div class="col-12">
-                    <label for="address" class="form-label">Address</label>
+                    @Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label col-md-2" })
                     <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
                     <div class="invalid-feedback">
                         Please enter your shipping address.
@@ -84,7 +86,7 @@
                 </div>
 
                 <div class="col-md-5">
-                    <label for="country" class="form-label">Country</label>
+                    @Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "control-label col-md-2 ml-auto" })
                     <select class="form-select" id="country" required>
                         <option value="">Choose...</option>
                         <option>Sweden</option>
@@ -95,7 +97,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <label for="city" class="form-label">City</label>
+                    @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
                     <select class="form-select" id="city" required>
                         <option value="">Choose...</option>
                         <option>Malmö</option>
@@ -106,7 +108,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <label for="zip" class="form-label">Zip</label>
+                    @Html.LabelFor(model => model.ZipCode, htmlAttributes: new { @class = "control-label col-md-2 mr-auto" })
                     <input type="text" class="form-control" id="zip" placeholder="" required>
                     <div class="invalid-feedback">
                         Zip code required.
@@ -183,6 +185,12 @@
             <hr class="my-4">
 
             <button class="w-100 btn btn-primary btn-lg" type="submit">Checkout</button>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10" style="color:green">
+                    @ViewBag.Message
+
+                </div>
+            </div>
         </form>
     </div>
 </div>
