fixed column error in cart

--- a/Deckel-Shop/Views/Cart/SavedCart.cshtml
+++ b/Deckel-Shop/Views/Cart/SavedCart.cshtml
@@ -22,7 +22,7 @@
                     <th scope="col">Product ID</th>
                     <th scope="col" class="text-center">Name</th>
                     <th scope="col" class="text-center">Price</th>
-                    <th scope="col" class="text-center">Amount</th>
+                    @*<th scope="col" class="text-center">Amount</th>*@
                     <th scope="col" class="text-center">Qty</th>
                     @*<th></th>*@
                     <th class="text-center">Total Price</th>
@@ -63,7 +63,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    @*<td></td>*@
                     <td></td>
                     <th class="text-center">@totalPrice SEK</th>
                 </tr>
