--- a/Deckel-Shop/Views/Cart/SavedCart.cshtml
+++ b/Deckel-Shop/Views/Cart/SavedCart.cshtml
@@ -18,8 +18,8 @@
         <table class="table table-hover">
             <thead class="thead-light">
                 <tr>
-                    <th scope="col">Image</th>
-                    <th scope="col">Product ID</th>
+                    <th scope="col" class="text-center">Image</th>
+                    <th scope="col" class="text-center">Product ID</th>
                     <th scope="col" class="text-center">Name</th>
                     <th scope="col" class="text-center">Price</th>
                     @*<th scope="col" class="text-center">Amount</th>*@
@@ -35,10 +35,10 @@
                     var productTotal = product.Price * product.Amount;
                     totalPrice += productTotal;
                     <tr>
-                        <td>
+                        <td class="text-right">
                             <img src="@product.ImgName2" width="150" height="150"/>
                         </td>
-                        <th>@product.Id</th>
+                        <th class="text-center">@product.Id</th>
                         <td class="text-center">@product.Name</td>
                         <td class="text-center">@product.Price</td>
                         @*<td class="text-center">@product.Amount</td>*@
